--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- BG -->
 			<div id="bg"></div>
+		<EMBED src="https://music.163.com/#/song/1299570939/" width=300 height=45 type=audio/mpeg loop="-1" autostart="false" volume="20"></EMBED>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
